kubernetes/k3s-01/workloads/redis/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: docker.io/library/redis:8.10.2@sha256:6f81e8915c60b065a524e6967e0ad1c639ba6efa84d669f823683ea04d9150ee
          command: ["redis-server", "/data/redis.conf"]
          volumeMounts:
            - name: redis-config
              mountPath: /data/redis.conf
              subPath: redis.conf
              readOnly: true
      volumes:
        - name: redis-config
          secret:
            secretName: redis-config
