kubernetes/k3s-01/workloads/redis/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
  namespace: redis
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: redis
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: argocd
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: authentik
        podSelector:
          matchLabels:
            app.kubernetes.io/name: authentik
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: gitea
        podSelector:
          matchLabels:
            app.kubernetes.io/name: gitea
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: immich
        podSelector:
          matchLabels:
            app: immich-server
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: romm
        podSelector:
          matchLabels:
            app: romm
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: nextcloud
        podSelector:
          matchLabels:
            app: nextcloud
      ports:
        - protocol: TCP
          port: 6379
